--- a/manifest.json
+++ b/manifest.json
@@ -11,8 +11,8 @@
            "48": "icon48.png",
            "64": "icon64.png",
           "128": "icon128.png" },
-  "version": "0.2",
+  "version": "0.2.1",
   "permissions": [ "http://www.newsblur.com/*"],
-  "description": "Opens the active item in a background tab when the user presses ';' in NewsBlur",
+  "description": "Opens the active item in a background tab when the user presses ';' in NewsBlur.",
   "manifest_version": 2
 }
