Opens new tabs next to the current NewsBlur tab, instead of opening them at the end of all tabs.

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
            "64": "icon64.png",
           "128": "icon128.png" },
   "version": "0.2",
-  "permissions": [ "http://www.newsblur.com/*"],
+  "permissions": [ "http://www.newsblur.com/*", "https://www.newsblur.com/*" ],
   "description": "Opens the active item in a background tab when the user presses ';' in NewsBlur",
   "manifest_version": 2
 }
